RESOLVED FIXED138313
ATTR_USED incorrectly applying to Clang
https://bugs.webkit.org/show_bug.cgi?id=138313
Summary ATTR_USED incorrectly applying to Clang
Dániel Bátyai
Reported 2014-11-03 09:01:51 PST
ATTR_USED was only intended for GCC. Also limit it to ENABLE(FTL_NATIVE_CALL_INLINING) since that's the only thing it's needed for.
Attachments
Patch (1.08 KB, patch)
2014-11-03 09:02 PST, Dániel Bátyai
no flags
Dániel Bátyai
Comment 1 2014-11-03 09:02:51 PST
Csaba Osztrogonác
Comment 2 2014-11-04 05:55:13 PST
Comment on attachment 240852 [details] Patch LGTM
WebKit Commit Bot
Comment 3 2014-11-04 06:31:58 PST
Comment on attachment 240852 [details] Patch Clearing flags on attachment: 240852 Committed r175544: <http://trac.webkit.org/changeset/175544>
WebKit Commit Bot
Comment 4 2014-11-04 06:32:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.