ATTR_USED incorrectly applying to Clang https://bugs.webkit.org/show_bug.cgi?id=138313

Reviewed by Csaba Osztrogonác.

ATTR_USED was only intended for GCC. Also limit it to ENABLE(FTL_NATIVE_CALL_INLINING)
since that's the only thing it's needed for.

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/156186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175544 268f45cc-cd09-0410-ab3c-d52691b4dbfc